# cortex

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  BUSINESS_PLAN.md  Cargo.toml  Dockerfile  LICENSE  README.md
.gitcore/: AGENT_INDEX.md  ARCHITECTURE.md  CLI_CONFIG.md  CONTEXT_LOG.md  features.json
.github/: atomicity-config.yml  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/actions/structure-validator/: Cargo.toml
.github/actions/structure-validator/src/: main.rs
.github/agents/: architect.agent.md  code-review.agent.md  commit-helper.agent.md  context-loader.agent.md  pr-creator.agent.md  protocol-claude.agent.md  protocol-codex.agent.md  protocol-gemini.agent.md  protocol-grok.agent.md  quick.agent.md  recipe-loader.agent.md  router.agent.md  session-exporter.agent.md  workflow-manager.agent.md  workspace-hub.agent.md
.github/instructions/: auto-context.instructions.md  claude-tools.instructions.md  claude.md  codex-tools.instructions.md  fallback-system.instructions.md  gemini-tools.instructions.md  grok-tools.instructions.md
.github/issues/: .gitkeep  .issue-mapping.json  FEAT_checkpoint_resume.md  FEAT_ci-cd-apk-jules-loop.md  FEAT_missed_job_recovery.md  FEAT_system1-and-2-implementation.md  FEAT_system3-belief-graph.md  PLAN_CLI_Roadmap.md  _TEMPLATE.md
.github/prompts/: context.prompt.md  export.prompt.md  help.prompt.md  issue.prompt.md  status.prompt.md  update.prompt.md
.github/workflows/: _repo-config.yml  aggregate-telemetry.yml  auto-assign.yml  ci-health.yml  ci.yml  commit-atomicity.yml  copilot-auto-implementation.yml  copilot-meta-analysis.yml  dependency-manager.yml  e2e-testing.yml  evolution-cycle.yml  guardian-agent.yml  jules-ci-cd-loop.yml  jules.yml  living-context.yml  planner-agent.yml  setup-labels.yml  structure-validator.yml  sync-issues.yml  triage-agent.yml  update-protocol.yml  user-notifications.yml  workflow-validator.yml
code-graph/: .dockerignore  Cargo.toml  Dockerfile  LICENSE  MANUAL.md  README.md  SPEC.md  stormideas.md
code-graph/.gitcore/: AGENT_INDEX.md  ARCHITECTURE.md
code-graph/src/: debug.rs  error.rs  lib.rs  main.rs  types.rs
code-graph/src/db/: benchmarks.rs  mod.rs
code-graph/src/indexer/: mod.rs
code-graph/src/parser/: go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
code-graph/src/query/: mod.rs  tests.rs
docs/: DOCUMENTATION_SYSTEM.md  README.md  RFC_001_RUST_UNIFICATION.md  infographic.html
docs-web/: astro.config.mjs  package-lock.json  package.json
docs-web/src/: content.config.ts
docs/agent-docs/: .gitkeep  CLI_GUIDE.md  README.md  RESEARCH_STACK_CONTEXT.md
docs/explanation/: CLI_TRUST.md  DOCUMENTATION_MIGRATION.md  README.md
docs/how-to/: README.md  SESSION_EXPORT.md
docs/prompts/: ARCHITECTURE_REVIEW_20251231_1310.md  README.md
docs/reference/: COMMIT_STANDARD.md  README.md
docs/setup/: AUTOMATION_SETUP.md
docs/templates/: plan.md  spec.md  tasks.md
docs/tutorials/: ATOMIC_COMMITS.md  README.md
docs/wiki/: Home.md
planka/: README.md  check_api.py  check_ports.py  create_boards.py  debug.py  debug2.py  docker-compose.yml  login.ps1  login.py  nginx.conf  pending_projects.md  project_index.md  setup.bat  test_api.py  test_http.ps1  test_login.py
scripts/: agent-state.ps1  agent-state.sh  ai-report.ps1  ai-report.sh  analyze-architecture.ps1  analyze-atomicity.sh  archive-sessions.ps1  check-protocol-update.ps1  check-protocol-update.sh  deploy-self-healing.ps1  detect-repo-config.ps1  detect-repo-config.sh  dispatcher-core.ps1  equip-agent.ps1  equip-agent.sh  evolution-metrics.ps1  export-session.ps1  generate-session-metrics.ps1  generate-workspace-agent.ps1  git-atomize.ps1  git-atomize.sh  guardian-core.ps1  init_project.ps1  init_project.sh  install-cli.ps1  install-cli.sh  merge-draft-pr.ps1  merge-draft-pr.sh  migrate-docs-to-diataxis.ps1  migrate-ide-rules.ps1  next-task.ps1  release-protocol.ps1  send-telemetry.ps1  sync-issues.ps1  sync-issues.sh  test-adaptive-system.ps1  test-adaptive-system.sh
scripts/hooks/: install-hooks.sh  (+1 more)
src/: main.rs  main_egui.rs  web.rs
tests/: a2a_test.rs  agents_test.rs  belief_graph_test.rs  checkpoint_test.rs  coordination_test.rs  lib.rs  memory_test.rs  scheduler_test.rs  security_test.rs  server_test.rs  tasks_test.rs
tools/: kanban_mcp.py  planka_config.json
web/: Cargo.toml
web/src/: lib.rs
(+62 files in other folders)
