[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[workspace]
members = ["code-graph", "web"]

[features]
default = []
egui = ["dep:egui", "dep:eframe", "dep:egui_extras"]
egui-standalone = ["dep:egui", "dep:eframe"]
wasm = ["dep:wasm-bindgen", "dep:web-sys", "dep:js-sys", "dep:egui", "dep:eframe"]

[dependencies]
code-graph = { path = "./code-graph" }
adk-rust = "0.3.2"
anyhow = "1.0.102"
async-trait = "0.1.89"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.8", features = ["v4"] }

# HTTP Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# State management
parking_lot = "0.12"
rusqlite = { version = "0.32.0", features = ["bundled"] }

# File traversal
walkdir = "2"

# egui - Native UI (optional, for web UI)
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", default-features = false, optional = true, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.29", optional = true, features = ["image", "serde"] }

# Security - Prompt Injection Detection
regex = "1.10"
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"

# For WASM web deployment
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.6.0"
criterion = "0.8"

[[bin]]
name = "cortex-gui"
path = "src/main_egui.rs"
required-features = ["egui-standalone"]

[[bench]]
name = "cortex"
harness = false

[profile.release]
opt-level = 3
lto = true
