[package]
name = "structure-validator"
version = "1.0.0"
edition = "2021"
description = "Git-Core Protocol structure validator"
authors = ["Git-Core Protocol"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
strip = true
